--- a/src/App.css
+++ b/src/App.css
@@ -1585,6 +1585,8 @@ nav button.active {
 
   .certification-card {
     padding: 30px 20px;
+    min-width: unset;
+    width: 100%;
   }
 
   .cert-badge-img {
@@ -1609,7 +1611,7 @@ nav button.active {
 
   .education-card {
     flex-direction: column;
-    padding: 30px 15px;
+    padding: 30px 20px;
     gap: 25px;
     text-align: center;
     width: 100%;
@@ -1673,6 +1675,7 @@ nav button.active {
   /* GitHub Section Responsive */
   .repo-card {
     padding: 30px 20px;
+    width: 100%;
   }
 
   .repo-header h3 {
